# temporal-orchestration-platform

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_OVERVIEW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RENDER_CLI_DEPLOYMENT.md  RENDER_QUICK_REFERENCE.md  SECURITY.md  deploy-with-render-cli.sh  render.yaml
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yaml
deploy/argocd/: apps.yaml
deploy/helm/temporal/: values.yaml
docs/: DEPLOYMENT.md  DEV_ENV.md  TROUBLESHOOTING.md  WORKFLOWS.md
render/: render.yaml
server/config/: dynamic_config.yaml  temporal.yaml
server/scripts/: init_db.sh  register_ns.sh
workflows/: Dockerfile  pyproject.toml
workflows/app/: cli.py  config.py  exceptions.py  logging.py  models.py  worker.py
workflows/app/activities/: fetch.py  processing.py
workflows/app/workflows/: orchestrator.py
workflows/tests/unit/: test_config.py  test_exceptions.py  test_models.py
